WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304851
REGRESSION(
304905@main
): [macOS iOS] imported/w3c/web-platform-tests/workers/worker-performance.worker.html is flaky failure
https://bugs.webkit.org/show_bug.cgi?id=304851
Summary
REGRESSION(304905@main): [macOS iOS] imported/w3c/web-platform-tests/workers/...
Marta Darbinyan
Reported
2026-01-02 10:31:04 PST
The following test is consistent failure on macOS and iOS queues both on main and in EWS. The test regressed after
304905@main
. imported/w3c/web-platform-tests/workers/worker-performance.worker.html Error: -FAIL Resource timing seems to work in workers assert_greater_than: Resource timing numbers reflect reality somewhat expected a number greater than 230 but got 0 +FAIL Resource timing seems to work in workers assert_greater_than: Resource timing numbers reflect reality somewhat expected a number greater than 230 but got 1 Test result:
https://ews-build.webkit.org/#/builders/136/builds/41690
Test history:
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fworkers%2Fworker-performance.worker.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-02 10:31:24 PST
<
rdar://problem/167443296
>
EWS
Comment 2
2026-01-02 10:51:18 PST
Test gardening commit
305049@main
(57b45f8b29c5): <
https://commits.webkit.org/305049@main
> Reviewed commits have been landed. Closing PR #56011 and removing active labels.
Alex Christensen
Comment 3
2026-01-06 14:07:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56158
EWS
Comment 4
2026-01-08 16:12:17 PST
Committed
305317@main
(9efcc7af593d): <
https://commits.webkit.org/305317@main
> Reviewed commits have been landed. Closing PR #56158 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug