REGRESSION(304905@main): [macOS iOS] imported/w3c/web-platform-tests/workers/worker-performance.worker.html is flaky failure https://bugs.webkit.org/show_bug.cgi?id=304851 rdar://167443296

Reviewed by David Kilzer.

304905@main added two new times to NetworkLoadMetrics, but it should've just added one and made responseStart
an alias for finalResponseHeadersStart.  This fixes the broken test by doing just that.  No redundant
responseStart/finalResponseHeadersStart.  responseStart is the time when the final header fields are starting
to be received.

* LayoutTests/http/tests/ipc/ipc-fetch-task-message-crash.html:
* LayoutTests/imported/w3c/web-platform-tests/workers/worker-performance.worker-expected.txt:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebCore/page/PerformanceResourceTiming.cpp:
(WebCore::PerformanceResourceTiming::finalResponseHeadersStart const):
(WebCore::PerformanceResourceTiming::responseStart const):
* Source/WebCore/platform/network/NetworkLoadMetrics.cpp:
(WebCore::NetworkLoadMetrics::NetworkLoadMetrics):
(WebCore::NetworkLoadMetrics::updateFromFinalMetrics):
(WebCore::NetworkLoadMetrics::isolatedCopy const):
* Source/WebCore/platform/network/NetworkLoadMetrics.h:
* Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(-[WKNetworkSessionDelegate URLSession:dataTask:didReceiveResponse:completionHandler:]):
* Source/WebKit/NetworkProcess/soup/NetworkDataTaskSoup.cpp:
(WebKit::NetworkDataTaskSoup::didGetHeaders):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/305317@main